fixed img dimension overflow

--- a/client/src/styles/Intro.scss
+++ b/client/src/styles/Intro.scss
@@ -1,6 +1,8 @@
-.intro {
+.intro, pre {
   word-wrap: break-word;
   white-space: pre-line;
+  overflow: hidden;
+  word-break: break-word;
   
   h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
@@ -23,9 +25,8 @@
   img {
     box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
     width: 100%; 
+    max-width: 620px !important;
     object-fit: cover; 
     height: auto;
-    
-    
   } 
 }
